test/testData/parser/negative/expressions/fewManyArgs.err
test/testData/parser/negative/expressions/fewManyArgs.c:7:3: error: too many arguments to function call
test/testData/parser/negative/expressions/fewManyArgs.c:11:3: error: too few arguments to function call
